Test ExtendPopup Demo

--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -28,7 +28,8 @@
         <!--<local:FieldsDemo />-->
         <!--<local:GroupBoxDemo />-->
         <!--<local:ComboBoxDemo />-->
-        <local:ScrollViewerDemo />
+        <!--<local:ScrollViewerDemo />-->
+        <local:PopupDemo />
     </Grid>
 
 
