--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -27,10 +27,11 @@
         <!--<local:PasswordBoxDemo />-->
         <!--<local:FieldsDemo />-->
         <!--<local:GroupBoxDemo />-->
-        <!--<local:ComboBoxDemo />-->
+        <local:ComboBoxDemo />
         <!--<local:ScrollViewerDemo />-->
         <!--<local:PopupDemo />-->
-        <local:SliderDemo />
+        <!--<local:SliderDemo />-->
+        <!--<local:ListsDemo />-->
     </Grid>
 
 
